# agent-trading

./: .gitignore  AGENTS.md  main.py  pyproject.toml  show_debate.py
.serena/: project.yml
benchmarks/: .gitignore  README.md  config.yaml
claudedocs/: UPGRADE_PLAN.md  architecture-trend-news.md  memory.md  task.md  trendnew-apidoc.md
dashboard/: README.md  package.json  pnpm-lock.yaml
dashboard/scripts/: com.tradingagents.dailyrun.plist.example  fetch_market_detail.py  fetch_quotes.py  run_daily.sh  smoke.sh
docs/: TREND_NEWS_INTEGRATION.md
eval_results/HPG/: debate_HPG_2026-03-06.md
pages/: _config.yml  index.html
scripts/benchmark/: install_cron.sh  install_launchd.sh  run_backtest.py  run_daily.py  seed_history.py
tests/: test_upgrade_smoke.py
tests/benchmark/: test_execution.py  test_metrics.py  test_models.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/benchmark/: __init__.py  baselines.py  calendar.py  eval_results_reader.py  execution.py  lockfile.py  metrics.py  models.py  prices.py  user_portfolio.py
tradingagents/dataflows/: f319.py  fireant.py  interface.py  stockstats_utils.py  trend_news_api.py  utils.py  vnstock_api.py  y_finance.py  yfinance_news.py
tradingagents/graph/: propagation.py  reflection.py  setup.py  trading_graph.py
tradingagents/llm_clients/: anthropic_client.py  openai_client.py
trend_news/: .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  SENTIMENT_LEARNING.md  batch_llm_eval.py  batch_sentiment.py  demo_learning_system.py  docker-compose.prod.yml  index.html  intelligence_dashboard.py  main.py  morning_brief.py  pipeline.py  pyproject.toml  quickstart.sh  railway.toml  requirements.txt  sentiment_dashboard.py  server.py  start_dashboard.sh
trend_news/chatbot/: .gitignore  __init__.py  __main__.py  agent.py  app.py  article_fetcher.py  chat-muti.py  config.py  indexer.py  prompts.py  pyproject.toml  start.sh  utils.py
trend_news/config/: config.yaml
trend_news/docs/: API.md
trend_news/scripts/: auto_optimize.py  build_corpus.py  fetch_content.py  lora_train.py  relabel_sentiment.py  setup_cron.sh
trend_news/sdk/: README.md  pyproject.toml
trend_news/sdk/trendradar/: __init__.py  client.py  models.py
trend_news/tests/: integration_test.sh  test_chatbot_mem0_integration.py  test_cognee_kuzu.py  test_cognee_query.py  test_e2e.py  test_e2e_full.py  test_scrapers_integration.py  (+5 more)
(+155 files in other folders)
