[project]
name = "trend-news-chatbot"
version = "0.1.0"
description = "Vietnamese Financial News Chatbot — Chainlit + LangGraph + mem0 + Cognee"
requires-python = ">=3.10"
dependencies = [
    # UI
    "chainlit>=2.0.0",

    # LangGraph agent
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # LLM providers (at least one key is required at runtime)
    "langchain-openai>=0.2.0",         # OpenAI (default)
    "langchain-google-genai>=2.0.0",   # Google Gemini (fallback)
    "langchain-groq>=0.2.0",           # Groq (free fallback)

    # Memory & knowledge graph
    "mem0ai>=0.1.0",
    "cognee>=0.5.0",

    # Vector store + local embeddings (no API cost)
    "chromadb>=0.5.0",
    "fastembed>=0.3.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = [
    "langchain-openai>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
# Start the Chainlit chatbot UI
trend-chatbot = "chatbot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# chatbot/ lives one level up from this pyproject.toml (in trend_news/)
# so we tell hatchling to look at the parent directory for the package.
sources = [".."]
packages = ["chatbot"]

[tool.hatch.build.targets.sdist]
sources = [".."]
include = ["chatbot/**"]
