[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trendradar"
version = "1.0.0"
description = "Python SDK for TrendRadar — Vietnamese stock market intelligence API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["trading", "vietnam", "stock", "sentiment", "finance", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
stream = ["websockets>=11.0"]
all = ["websockets>=11.0"]

[project.urls]
Homepage = "https://github.com/phanngoc/trendradar"
Documentation = "http://localhost:8000/docs"

[tool.hatch.build.targets.wheel]
packages = ["trendradar"]
